Kubernetes/Deploy/nginx/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.maison.local`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
    certResolver: selfsigned
